# agno

./: .gitignore  CONTRIBUTING.md  README.md
libs/agno/: pyproject.toml  requirements.txt
libs/agno/agno/: exceptions.py
libs/agno/agno/agent/: agent.py
libs/agno/agno/compression/: manager.py
libs/agno/agno/culture/: manager.py
libs/agno/agno/db/: base.py
libs/agno/agno/db/dynamo/: dynamo.py  schemas.py  utils.py
libs/agno/agno/db/firestore/: firestore.py  schemas.py  utils.py
libs/agno/agno/db/gcs_json/: gcs_json_db.py  utils.py
libs/agno/agno/db/in_memory/: in_memory_db.py  utils.py
libs/agno/agno/db/json/: json_db.py  utils.py
libs/agno/agno/db/migrations/: manager.py  v1_to_v2.py
libs/agno/agno/db/mongo/: async_mongo.py  mongo.py  schemas.py
libs/agno/agno/db/mysql/: mysql.py  schemas.py  utils.py
libs/agno/agno/db/postgres/: async_postgres.py  postgres.py  schemas.py  utils.py
libs/agno/agno/db/redis/: redis.py  schemas.py  utils.py
libs/agno/agno/db/schemas/: memory.py
libs/agno/agno/db/singlestore/: schemas.py  singlestore.py  utils.py
libs/agno/agno/db/sqlite/: async_sqlite.py  schemas.py  sqlite.py  utils.py
libs/agno/agno/db/surrealdb/: models.py  surrealdb.py
libs/agno/agno/eval/: accuracy.py  performance.py  reliability.py  utils.py
libs/agno/agno/knowledge/: knowledge.py  utils.py
libs/agno/agno/knowledge/chunking/: semantic.py  strategy.py
libs/agno/agno/knowledge/reader/: csv_reader.py  docx_reader.py  field_labeled_csv_reader.py  json_reader.py  markdown_reader.py  pdf_reader.py  pptx_reader.py  s3_reader.py  tavily_reader.py  text_reader.py  web_search_reader.py  website_reader.py
libs/agno/agno/memory/strategies/: base.py
libs/agno/agno/models/: base.py  message.py  response.py
libs/agno/agno/models/aimlapi/: aimlapi.py
libs/agno/agno/models/anthropic/: claude.py
libs/agno/agno/models/aws/: bedrock.py  claude.py
libs/agno/agno/models/azure/: ai_foundry.py  openai_chat.py
libs/agno/agno/models/cerebras/: cerebras.py  cerebras_openai.py
libs/agno/agno/models/cohere/: chat.py
libs/agno/agno/models/cometapi/: cometapi.py
libs/agno/agno/models/deepinfra/: deepinfra.py
libs/agno/agno/models/fireworks/: fireworks.py
libs/agno/agno/models/google/: gemini.py
libs/agno/agno/models/groq/: groq.py
libs/agno/agno/models/huggingface/: huggingface.py
libs/agno/agno/models/ibm/: watsonx.py
libs/agno/agno/models/internlm/: internlm.py
libs/agno/agno/models/langdb/: langdb.py
libs/agno/agno/models/litellm/: chat.py  litellm_openai.py
libs/agno/agno/models/meta/: llama.py  llama_openai.py
libs/agno/agno/models/mistral/: mistral.py
libs/agno/agno/models/nebius/: nebius.py
libs/agno/agno/models/nvidia/: nvidia.py
libs/agno/agno/models/openai/: chat.py  responses.py
libs/agno/agno/models/openrouter/: openrouter.py
libs/agno/agno/models/perplexity/: perplexity.py
libs/agno/agno/models/requesty/: requesty.py
libs/agno/agno/models/sambanova/: sambanova.py
libs/agno/agno/models/siliconflow/: siliconflow.py
libs/agno/agno/models/together/: together.py
libs/agno/agno/models/vercel/: v0.py
libs/agno/agno/models/xai/: xai.py
libs/agno/agno/os/: app.py  config.py  mcp.py  router.py  schema.py  utils.py
libs/agno/agno/reasoning/: anthropic.py  gemini.py  openai.py  vertexai.py
libs/agno/agno/run/: __init__.py  agent.py  base.py  team.py  workflow.py
libs/agno/agno/session/: team.py
libs/agno/agno/team/: team.py
libs/agno/agno/tools/: file.py  file_generation.py  function.py  google_drive.py  nano_banana.py
libs/agno/agno/tools/mcp/: mcp.py  multi_mcp.py
libs/agno/agno/utils/: agent.py  events.py  hooks.py  http.py  mcp.py  media.py  team.py  tokens.py
libs/agno/agno/utils/print_response/: agent.py  team.py
libs/agno/agno/vectordb/: base.py
libs/agno/agno/vectordb/cassandra/: cassandra.py
libs/agno/agno/vectordb/chroma/: chromadb.py
libs/agno/agno/vectordb/clickhouse/: clickhousedb.py
libs/agno/agno/vectordb/couchbase/: couchbase.py
libs/agno/agno/vectordb/lancedb/: lance_db.py
libs/agno/agno/vectordb/milvus/: milvus.py
libs/agno/agno/vectordb/mongodb/: __init__.py  mongodb.py
libs/agno/agno/vectordb/pgvector/: pgvector.py
libs/agno/agno/vectordb/pineconedb/: pineconedb.py
libs/agno/agno/vectordb/qdrant/: qdrant.py
libs/agno/agno/vectordb/redis/: __init__.py  redisdb.py
libs/agno/agno/vectordb/singlestore/: singlestore.py
libs/agno/agno/vectordb/surrealdb/: surrealdb.py
libs/agno/agno/vectordb/weaviate/: weaviate.py
libs/agno/agno/workflow/: __init__.py  agent.py  condition.py  loop.py  parallel.py  router.py  step.py  steps.py  types.py  workflow.py
libs/agno/migrations/: README.md  migrate_mysql.py  migrate_postgres.py  migrate_singlestore.py  migrate_sqlite.py
libs/agno/migrations/v1_to_v2/: migrate_to_v2.py  migrate_vectordbs_to_v2.py
libs/agno/tests/integration/: conftest.py  test_basic.py  test_os_basic.py
libs/agno/tests/integration/agent/: test_agent_convenience_functions.py  test_agent_reasoning_new_models.py  test_agent_run_cancellation.py  test_async_tool_calling.py  test_dependencies.py  test_disable_storing_tool_and_history_messages.py  test_event_streaming.py  test_filter_tool_calls.py  test_hooks.py  test_input.py  test_instructions.py  test_message_ordering.py  test_multimodal.py  test_output_model.py  test_output_schema_override.py  test_rag.py  test_reasoning_content_default_COT.py  test_reasoning_content_reasoning_tools.py  test_session.py  test_session_state.py  test_tool_call_limit.py  test_tool_compression.py  test_user_confirmation_flows.py
libs/agno/tests/integration/knowledge/: test_async_knowledge_retriever.py  test_pdf_knowledge.py  test_pptx_knowledge.py  test_website_knowledge.py
libs/agno/tests/integration/managers/: test_memory_manager.py  test_session_summary_manager.py
libs/agno/tests/integration/os/: conftest.py  test_agent_runs.py  test_built_in_endpoints.py  (+9 more)
libs/agno/tests/unit/: test_filters.py
libs/agno_infra/: pyproject.toml
libs/agno_infra/agno/infra/: enums.py  operator.py
(+712 files in other folders)
